# simple-image-gallery-viewer

./: .gitignore  README.md  pyproject.toml  run_deploy_pypi.sh  sigvie.py
src/sigvie/: __main__.py  api.py  app.py  constant.py  model.py  util.py  view.py
src/sigvie/templates/component/: filepath_form_component.html  head_component.html  media_component.html  media_title_component.html
src/sigvie/templates/page/: index_page.html  media_gallery_page.html  media_single_page.html
src/sigvie/templates/style/: style.css
src/sigvie/web/component/: filepath_form_component.html  head.html  head_component.html  media_component.html
src/sigvie/web/page/: file.html  file_page.html  gallery.html  gallery_page.html  index.html  index_page.html
src/sigvie/web/style/: style.css
